<resources>
    <string name="app_name" translatable="false">Heyra</string>
    <string name="recognition_service_label">Heyra talgreining</string>
    <string name="recognition_service_description">Heyra er talgreiningarvél fyrir Android stýrikerfi sem knúin er af Tiro</string>
    <string name="button_start_listening">Hlusta</string>
    <string name="speech_input_method_label">Heyra raddinnsláttur</string>
    <string name="server_address">Netslóð talgreiningarþjóns</string>
    <string name="server_address_summary">Netslóð talgreiningarþjóns sem styður tiro.speech.v1alpha.Speech forritunarskilin.</string>
    <string name="pref_server_address_not_valid">Þessi netslóð er ekki á réttu sniði!</string>
    <string name="pref_reset_title">Endurstilla</string>
    <string name="pref_reset_summary">Upphafstilla öll stillingaratriði</string>
    <string name="prompt_speak">Talaðu…</string>
    <string name="recognize_web_search_name">Heyra vefleit</string>
    <string name="settings_name">Heyra stillingar</string>
    <string name="error_speech_timeout">Náði þessu ekki alveg… Reyndu aftur!</string>
    <string name="error_speech_unknown">Arg… Upp kom óþekkt villa! Prófaðu aftur.</string>
    <string name="error_speech_no_match">Heyrði ekki í þér!</string>
    <string name="error_insufficient_permission_title">Ekki næg réttindi!</string>
    <string name="error_insufficient_permission_message">Heyra vantar réttindi til að taka upp hljóð.</string>
    <string name="delete_word_button_description">Stroka út síðasta orð</string>
    <string name="pref_permissions_status_title">Kerfisréttindi</string>
    <string name="pref_permissions_status_summary">Öll nauðynleg kerfisréttindi virk.</string>
    <string name="pref_insufficient_permissions_status_summary">Heyra vantar nauðsynleg kerfisréttindi. Smelltu hér til að fara opna kerfisstillingar.</string>
    <string name="pref_notices_title">Notkunarleyfi þriðju aðila</string>
    <string name="pref_notices_summary">Frjáls og opin notkunarleyfi forritasafna sem Heyra notar.</string>
    <string name="pref_version_title">Útgáfuupplýsingar</string>
    <string name="pref_version_summary"></string>
    <string name="pref_privacy_title">Persónuvernd</string>
    <string name="pref_privacy_summary">Smelltu hér til að lesa persónuverndaryfirlýsingu fyrir Heyra.</string>
    <string name="button_settings_description">Opna stillingar fyrir Heyra</string>
    <string name="button_action_description">Framkvæma</string>
    <string name="pref_input_method_status_title">Staða sýndarlyklaborðs</string>
    <string name="pref_input_method_status_summary_active">Sýndarlyklaborð Heyra er virkt</string>
    <string name="pref_input_method_status_summary_inactive">Sýndarlyklaborð Heyra er ekki virkt. Þú getur virkjað það í tungumála-/lyklaborðstillingum kerfisins</string>
</resources>
