<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <EditTextPreference
        app:key="server_address"
        app:title="@string/server_address"
        app:summary="@string/server_address_summary"
        app:defaultValue="grpcs://speech.tiro.is:443" />

    <Preference
        app:key="permissions_status"
        app:title="@string/pref_permissions_status_title"
        app:summary="@string/pref_permissions_status_summary" />

    <Preference
        app:key="input_method_status"
        app:title="@string/pref_input_method_status_title"
        app:summary="@string/pref_input_method_status_summary_active" />

    <Preference
        app:key="reset"
        app:title="@string/pref_reset_title"
        app:summary="@string/pref_reset_summary" />

    <Preference
        app:key="notices"
        app:title="@string/pref_notices_title"
        app:summary="@string/pref_notices_summary" />

    <Preference
        app:key="version"
        app:title="@string/pref_version_title"
        app:summary="@string/pref_version_summary" />

    <Preference
        app:key="privacy"
        app:title="@string/pref_privacy_title"
        app:summary="@string/pref_privacy_summary" />
</PreferenceScreen>
