<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".InputMethodService"
    android:layout_width="350dp"
    android:layout_height="250dp"
    android:padding="25dp"
    android:background="@color/design_default_color_background"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:theme="@style/Theme.Heyra">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/button_settings"
            android:contentDescription="@string/button_settings_description"
            android:layout_height="48dp"
            android:layout_width="48dp"
            android:layout_weight="0.5"
            android:layout_gravity="center"
            android:src="@drawable/ic_settings"
            android:scaleType="fitCenter"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true" />

        <ImageButton
            android:id="@+id/button_start_listening"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/button_start_listening"
            android:gravity="center"
            android:scaleType="fitCenter"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/ic_microphone" />

        <ImageButton
            android:id="@+id/delete_word_button"
            android:layout_height="48dp"
            android:layout_width="48dp"
            android:layout_gravity="center"
            android:layout_weight="0.5"
            android:clickable="true"
            android:contentDescription="@string/delete_word_button_description"
            android:focusable="true"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_backspace"
            android:background="?android:attr/selectableItemBackgroundBorderless" />
    </LinearLayout>

    <TextView
        android:id="@+id/text_recognition_results"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:textColor="@color/black"
        android:text=""
        android:textAlignment="center" />

</LinearLayout>
